2012-01-16  Brent Fulgham  <bfulgham@webkit.org>

        [WinCairo] Build fix after r104155. Several debug targets were not
        properly including the '*Common' property sheets.

        * DumpRenderTree/win/DumpRenderTreeLauncherDebugCairoCFLite.vsprops:
        * DumpRenderTree/win/ImageDiffLauncherDebugCairoCFLite.vsprops:
        * MiniBrowser/Configurations/MiniBrowserLauncherDebugCairoCFLite.vsprops:
        * WebKitTestRunner/win/WebKitTestRunnerLauncherDebugCairoCFLite.vsprops:
        * WinLauncher/WinLauncherLauncherDebugCairoCFLite.vsprops:

2012-01-16  Csaba Osztrogonác  <ossy@webkit.org>

        REGRESSION(r105072): It broke committers_unittest.py
        https://bugs.webkit.org/show_bug.cgi?id=76396

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/config/committers_unittest.py:
        (CommittersTest._assert_fuzz_match): It should handle more names.
        (CommittersTest.test_contributors_by_fuzzy_match_with_legacy_names): Fix the testcase.

2012-01-16  Mario Sanchez Prada  <msanchez@igalia.com>

        [GTK] Include gtk+3 in the jhbuild modules
        https://bugs.webkit.org/show_bug.cgi?id=76284

        Reviewed by Philippe Normand.

        * gtk/jhbuild.modules: Add some gtk+3 to the jhbuild moduleset.

2012-01-16  Dan Winship  <danw@gnome.org>

        Add myself as a committer

        Unreviewed

        * Scripts/webkitpy/common/config/committers.py:

2012-01-16  Raphael Kubo da Costa  <kubo@profusion.mobi>

        Unreviewed; fix the build when --as-needed and --no-copy-dt-needed-entries are passed to the linker.

        Some recent versions of a few Linux distributions have started passing
        --as-needed and --no-copy-dt-needed-entries by default to the linker,
        which broke the build when SHARED_CORE was turned on, as libwtf_efl.so
        needed a few symbols from libjavascriptcore_efl.so.

        * DumpRenderTree/efl/CMakeLists.txt: Explicitly pass WTF_LIBRARY_NAME