@@ -1,3 +1,12 @@
+2012-01-16  Takashi Toyoshima  <toyoshim@chromium.org>
+
+        Add toyoshim as a committer.
+        https://bugs.webkit.org/show_bug.cgi?id=76390
+
+        Reviewed by Hajime Morita.
+
+        * Scripts/webkitpy/common/config/committers.py:
+
 2012-01-16  Brent Fulgham  <bfulgham@webkit.org>
 
         [WinCairo] Build fix after r104155. Several debug targets were not
